<resources>
    <string name="app_name">FileManager</string>
    <string name="logo">Logo</string>
    <string name="design_by_kaviz">Design By Kaviz</string>
    <string name="home">Home</string>
    <string name="internal_storage">Internal Storage</string>
    <string name="sd_card">SD Card</string>
    <string name="more">More</string>
    <string name="about">About</string>
    <string name="open_drawer">Open Navigation Drawer</string>
    <string name="close_drawer">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back_button">Back Button</string>
    <string name="file_icon">File Icon</string>
    <string name="option_image">Option Image</string>
    <string name="sd_card_not_found">SD Card Not Found</string>
    <string name="videos">Videos</string>
    <string name="recent">Recent</string>
</resources>